--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,10 @@
   font-style: normal;
 }
 
+html, body {
+  overflow-x: hidden;
+}
+
 body{
   background: #0f0f16;
   color: #626670;
